--- a/taskerize/src/index.css
+++ b/taskerize/src/index.css
@@ -4,9 +4,11 @@ h1{
 
 *{
     font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--theme-background-color);
 }
 :root{
     --theme-border: #d7d7d7;
+    --theme-background-color: #4adbb4;
 }
 
 .footer{
